// Copyright 2025 Esri
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

import SwiftUI

struct NavigationLayerTestViews: View {
    var body: some View {
        List {
            NavigationLink("NavigationLayer Test Case 1", destination: NavigationLayerTestCase1View())
            NavigationLink("NavigationLayer Test Case 2", destination: NavigationLayerTestCase2View())
            NavigationLink("NavigationLayer Test Case 3", destination: NavigationLayerTestCase3View())
        }
    }
}
